--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 header {
   color: white;
-  font-size: 15px;
+  font-size: 30px;
+  text-align: center;
 }
 
 .nav-link {
@@ -12,5 +13,14 @@ header {
 }
 
 #navbar {
+  position: fixed;
+  min-width: 290px;
+  top: 0px;
+  left: 0px;
   width: 300px;
+  height: 100%;
+  border-right: 2px solid cornflowerblue;
+}
+main {
+  background-color: cornflowerblue;
 }
