--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,13 @@
+#navbar {
+  position: fixed;
+  min-width: 290px;
+  top: 0px;
+  left: 0px;
+  width: 300px;
+  height: 100%;
+  border-right: 4px solid deepskyblue;
+}
+
 header {
   color: white;
   font-size: 30px;
@@ -10,16 +20,6 @@ header {
 
 .nav-link:hover {
   color: deepskyblue;
-}
-
-#navbar {
-  position: fixed;
-  min-width: 290px;
-  top: 0px;
-  left: 0px;
-  width: 300px;
-  height: 100%;
-  border-right: 4px solid deepskyblue;
 }
 
 #main-doc {
@@ -37,4 +37,38 @@ section article {
   color: #4d4e53;
   margin: 15px;
   font-size: 0.96em;
+}
+code {
+  display: block;
+  text-align: left;
+  white-space: pre-line;
+  position: relative;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 2;
+  background-color: #f7f7f7;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 5px;
+}
+
+/* Media Queries */
+@media only screen and (max-width: 767.98px) {
+  #navbar {
+    display: block;
+    position: absolute;
+    top: 0;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    max-height: 275px;
+    border: none;
+    z-index: 1;
+    border-bottom: 2px solid;
+  }
+  #main-doc {
+    position: relative;
+    margin-left: 0px;
+    margin-top: 270px;
+  }
 }
